# v

./: README.md  a.py  aflow.py  gkx.py  graph_env.py  ngkx.py  pretty.py  pyproject.toml  qwen.py  self.py  stocholm_prompt.py  ugly.py  util.py
data/: data.py  grok.py  mcp.py  point.py  qwen.py  vcot.py
